# synth

./: Cargo.toml  LICENSE  README.md
docs/technical/: bootstrapping.md  concurrency.md  exceptions.md  memory.md  type-system.md
examples/: dev.sy  errors.sy  generics.sy  helloworld.sy  memory.sy  metaprogramming.sy  multithreading.sy  syntax.sy
examples/database/: database.sy
selfhost/: main.sy
src/: ast.rs  codegen.rs  compiler.rs  comptime.rs  ir.rs  ir_interpret.rs  ir_parse.rs  lex.rs  main.rs  optimize.rs  parse.rs  symtable.rs  token.rs  types.rs
src/codegen/: llvm.rs  mod.rs  x86.rs
