[package]
name = "synth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
env_logger = "0.10.1"
llvm-sys = "170.0.1"
llvmenv = "0.3.2"
log = "0.4.20"
